--- a/css/styles.css
+++ b/css/styles.css
@@ -176,11 +176,20 @@ a:visited {
     transition: all 0.1s;
 }
 
+/* Active tab for menu items */
 #global-navigation a:hover,
 .active-tab {
     color: #ffc107;
     /*border-bottom: 3px solid #ff9800;*/
     box-shadow: inset 0 -3px 0 #ff9800;
+}
+
+/* Active tab for sub menus */
+.menu-subtabs .active-tab {
+    color: #ffc107;
+    border-left: 3px solid #ff9800;
+    background: #3a3a3a;
+    box-shadow: unset;
 }
 
 #side-nav {
@@ -260,9 +269,8 @@ a:visited {
     grid-column-start: 2;
     /* margin-left: 30px; */
     position: relative;
-    top: 110px;
-    height: calc(100vh - 110px);
-    /* Fixed the TOP CSS 110px due to body having overflow hidden and top = 110px so the last 110px is hidden, this will fix it */
+    height: calc(100vh - 110px); /* Fixed the TOP CSS 110px due to body having overflow hidden and top = 110px so the last 110px is hidden, this will fix it */
+    margin-top: 110px;
     padding: calc(0.22em + 30px);
     padding-right: 30px;
     overflow-x: hidden;
@@ -330,6 +338,7 @@ table {
     margin-bottom: 40px;
     max-width: 80vw;
     border-bottom: 1px solid var(--element-bottom-border);
+    content-visibility: auto;
 }
 
 .item-table-label {
@@ -751,7 +760,7 @@ pre {
     text-align: right;
     display: inline-block;
     width: 50px;
-    rotate: 180deg;
+    transform: rotate(180deg);
 }
 
 #theme-switch:hover {
@@ -815,6 +824,7 @@ pre {
     box-shadow: inset 0 -3px 0 #ff9800;
 }
 
+/* Hover over submenu items */
 #global-navigation .menu-subtabs a:hover {
     box-shadow: unset;
     border-left: 3px solid #ff9800;
