--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@
     --box-font-color: black;
     --box-inner-font-color: white;
     --box-bg: rgba(0, 0, 0, 0.4) !important;
-    --red-box-font-color: black;
+    --red-box-font-color: #1e1e1e;
     --red-box-bg: rgba(0, 0, 0, 0.4);
 
     --syntax-item-shadow: 0px 0px 15px rgba(0, 0, 0, .5);
@@ -1083,11 +1083,11 @@ pre {
 }
 
 .sk-eff {
-    color: rgb(255, 174, 0)
+    color: rgb(255, 174, 0);
 }
 
 .sk-expr {
-    color: rgb(199, 152, 66)
+    color: rgb(255, 174, 25);
 }
 
 .sk-event {
