--- a/css/styles.css
+++ b/css/styles.css
@@ -746,7 +746,7 @@ td ul {
 
     #cookies-bar {
         flex-direction: column;
-        padding-bottom: 50px;
+        padding-bottom: 70px !important;
     }
 }
 
